[package]
name = "data_type_checker"
version = "0.1.2"
edition = "2021"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
description = "A lightweight Rust library for validating and converting data types from strings."
license = "MIT"
repository = "https://github.com/bensatlantik/data_type_checker"
readme = "README.md"
keywords = ["datatype", "validation", "conversion", "utility"]

[dependencies]
